--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             border-radius: 15px;
             margin-top: -135px;
             width: 100%;
-            height: 75vh;
+            height: 100%;
 
         }
         html{
