--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="https://danzokka.github.io/new-portfolio/">
                 <img src="img/logobranca.png" class="logo">
             </a>
-            <a href="https://github.com/Danzokka">
+            <a href="https://github.com/Danzokka/projeto-flappy-bird">
                 <i class="fab fa-github"></i>
             </a>    
         </nav>
