--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <nav>
             <a href="https://danzokka.github.io/new-portfolio/">
-                <img src="img/logobranca.png" class="logo">
+                <img src="img/logobranca.png" class="logo" draggable="false">
             </a>
             <a href="https://github.com/Danzokka/projeto-flappy-bird">
                 <i class="fab fa-github"></i>
