--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <header>
         <nav>
-            <a href="https://danzokka.github.io/new-portfolio/">
+            <a href="https://danzokka.github.io/">
                 <img src="img/logobranca.png" class="logo" draggable="false">
             </a>
             <a href="https://github.com/Danzokka/projeto-flappy-bird">
